@@ -22,27 +22,3 @@ from SEQ_Marker_Cache c
 where c._Refs_key = 64047
 and c._Organism_key = 1
 
-select r._Accession_key
-into #toDeleteSP
-from ACC_AccessionReference r, ACC_Accession a, MRK_Marker m
-where r._Refs_key = 53672
-and r._Accession_key = a._Accession_key
-and a._LogicalDB_key = 9
-and a._MGIType_key = 2
-and a._Object_key = m._Marker_key
-and m._Organism_key = 1
-
-create index idx1 on #toDeleteSP(_Accession_key)
-
-delete ACC_AccessionReference
-from #toDeleteSP d, ACC_AccessionReference r
-where d._Accession_key = r._Accession_key
-
-delete ACC_Accession
-from #toDeleteSP d, ACC_Accession r
-where d._Accession_key = r._Accession_key
-
-delete SEQ_Marker_Cache
-from SEQ_Marker_Cache c
-where c._Refs_key = 53672
-and c._Organism_key = 1
